package Modelo;

public interface Controlador {
    void execute(int input);
}
